--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="cabecalho">
             <nav class="cabecalho_menu">
                 <a class="cabecalho_menu_link">Home</a>
-                <a class="cabecalho_menu_link" href="/about.html">Sobre Mim</a>
+                <a class="cabecalho_menu_link" href="/products.html">Produtos</a>
             </nav>
         </header>
         <main class="apresentacao">
@@ -30,7 +30,6 @@
 
             </section>
             <img src="/assets/img-homem-na-praia.jpg" class="foto-praia">
-            <img src="/assets/img-senac-minas.png" class="foto-senac">
 
         </main>
         <footer class="rodape">
