--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <strong class="marca_texto">Front-End</strong> refere-se à parte de um site ou aplicativo da web com a qual os usuários interagem diretamente. Isso inclui a interface de usuário, o design visual e a funcionalidade que é executada no navegador da web do usuário. Desenvolvedores front-end usam HTML, CSS e muitas vezes JavaScript para criar interfaces de usuário interativas e responsivas. Eles se concentram em garantir uma experiência agradável e intuitiva para os usuários finais.</p>
                 <div class="apresentacao_links">
                     <h2 class="apresentacao_links_titulo">Minhas Redes</h2>
-                    <a class="apresentacao_links_link"href="https://github.com/MFASterry221">GitHub</a>
-                    <a class="apresentacao_links_link" href="https://www.linkedin.com/in/mayki-ferson-b2a436283/">Linkedin</a>
+                    <a class="apresentacao_links_link"href="https://github.com/MFASterry221">GitHub<img src="/assets/github.png" class="logo_link"></a>
+                    <a class="apresentacao_links_link" href="https://www.linkedin.com/in/mayki-ferson-b2a436283/">Linkedin<img src="assets/logotipo-do-linkedin.png" class="logo_link"></a>
                 <p class="meu_nome">Mayki Ferson Ataliba Santos</p>
                 <p class="senac_mg">Senac-MG 2024</p>
                 </div> 
